--- a/lesson2/designprinciples.html
+++ b/lesson2/designprinciples.html
@@ -65,7 +65,7 @@
               </main>
               <footer class="footer">
                 <p>
-                    &copy; Winter Term 2022 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
+                    &copy; Fall Term 2023 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
                 </p>
                 <p class="last-update" id="lastModified"></p>
             </footer>
