--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Seth Markle</h1>
             </header>
         <main>
-            <h1>WDD 230: Assignment Portal</h1>
+            <h1>WDD 230: Assignment Portal Home Page</h1>
             <ul>
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Design Principles Document</a></li>
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
