--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           </nav>
             <main>
             <h2>WDD 230: Web Frontend Development</h2>
+            <section>
+
+            </section>
+            <h3>Learning Activites</h3>
             <ul>
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Design Principles Document</a></li>
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
