--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
             <main>
             <h2>WDD 230: Web Frontend Development</h2>
             <section>
-              .card {
-                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-                max-width: 300px;
-                margin: auto;
-                text-align: center;
-                font-family: arial;
-              }
+              <div class="card">
+                <img src="img.jpg" alt="John" style="width:100%">
+                <h1>John Doe</h1>
+                <p class="title">CEO & Founder, Example</p>
+                <p>Harvard University</p>
+                <a href="#"><i class="fa fa-dribbble"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <p><button>Contact</button></p>
+              </div>
             </section>
             <h3>Learning Activites</h3>
             <ul>
