--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 <p><button>Contact</button></p>
               </div>
             </section>
+            <section>
+              <div class="card"
+              <h3>Information</h3>
+              
+            </section>
             <ul>
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Design Principles Document</a></li>
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
