--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section>
               <div class="card">
                 <h3>Learning Activites</h3>
-                <li>Lesson 2: <a href="lesson2/designprinciples.html">Design Principles Document</a></li>
+                <a href="lesson2/designprinciples.html">Design Principles Document</a>
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
               </div>
