--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
               <div class="card">
                 <h3>Learning Activites</h3>
                 <a href="lesson2/designprinciples.html">Design Principles Document</a>
-                <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
-                <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
+                <a href="lesson3/index.html">Website Planning Document</a>
+                <a href="chamber/index.html">Chamber Home Page Build</a>
               </div>
             </section>
             <section>
