--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a href="lesson02/design-principles.html">Design Principles Document</a>
                 </li>
                 <li>
-                  <a href="lesson3/index.html">Website Planning Document</a>
+                  <a href="lesson03/chamber-site-plan.html">Website Planning Document</a>
                 </li>
                 <li>
                 <a href="chamber/index.html">Chamber Home Page Build</a>
