--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -7,10 +7,10 @@
     <meta name="description" content="home page setup for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="../styles/small.css">
-    <link rel="stylesheet" href="../styles/medium.css">
-    <link rel="stylesheet" href="../styles/large.css">
-    <link rel="stylesheet" href="../styles/normalize.css">
+    <link rel="stylesheet" href="styles/normalization.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/small.css">
 </head>
 <body>
     <div class="container">
@@ -38,6 +38,13 @@
                 </ul>
             </nav>
             <article>
+                <section class="name">
+                    <h3>Site Name</h3>
+                    <p>This name of this site will be The Hudson Chamber of Commerce.
+                       This is a small town in Ohio 
+                       which is about 45 minutes away from where I live.
+                    </p>
+                </section>
                 <section class="purpose">
                     <h3>Site Purpose</h3>
                     <p>The purpose of this site is to be a chamber of commerce for a fictional community.  This site will have events and a calendar.
@@ -45,13 +52,23 @@
                         be following a templete that I will produce by sketching.   
                     </p>
                 </section>
-                <section class="domain">
-                    <h3>Domain Name</h3>
-                    <p>fliptonchamberofcommerce.com</p>
+                <section class="scenarios">
+                    <h3>Scenarios</h3>
+                    <p></p>
                 </section>
-                <section class="logo">
-                    <h3>Logo</h3>
-                    <img src="../images/index.png" alt="logo">
+                <section class="color">
+                    <h3>Color Schema</h3>
+                    <img src="/images/colors.png" alt="colors">
+                </section>
+                <section class="typography">
+                    <h3>Typography</h3>
+                    <p>The font that I will use for this project is Gugi.
+                       I may use another one, but at this time I am experimenting.
+                    </p>
+                </section>
+                <section class="wireframe">
+                    <h3>Wireframe</h3>
+                    <p></p>
                 </section>
             </article>
         </main>
