--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="chamber of commerce">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="chamber layout wdd 230">
+    <meta name="description" content="chamber layout for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
@@ -14,7 +15,7 @@
     <link rel="stylesheet" href="/chamber/styles/base.css">
     <link rel="stylesheet" href="/chamber/styles/medium.css">
     <link rel="stylesheet" href="/chamber/styles/larger.css">
-    <title>Flipton Chamber of Commerce</title>
+    <title>Hudson Chamber of Commerce</title>
 </head>
 <header>
     <div class="main-logo">
@@ -33,6 +34,8 @@
             <img src="/chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
+</header>
+    <body>
     <div id="datebox">
         <p id="p1"></p>
         <script>
@@ -46,7 +49,7 @@
             <li><a href="/index.html">Home</a></li>
         </ul>
     </nav>
-</header>
+
 <main>
     <div id="hero">Hero Image</div>
     <div id="action">Call to Action</div>
@@ -58,6 +61,7 @@
     <div>Spotlight 3</div>
     </div>
 </main>
+</body>
 <footer>
     <section>
         <h6>Info</h6>
