--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -23,7 +23,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="./index.html">Home</a>
+                        <a href="../index.html">Home</a>
                     </li>
                 </ul>
             </nav>
@@ -51,7 +51,7 @@
                 </section>
                 <section class="color">
                     <h3>Color Schema</h3>
-                    <img src="./images/colors.png" alt="colors">
+                    <img src="../images/colors.png" alt="colors">
                 </section>
                 <section class="typography">
                     <h3>Typography</h3>
