--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -8,7 +8,7 @@
     <meta name="tittle" content="site plan">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="/base.css">
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="/styles/normalization.css">
     <link rel="stylesheet" href="/styles/larger.css">
     <link rel="stylesheet" href="/styles/medium.css">
@@ -51,7 +51,7 @@
                 </section>
                 <section class="color">
                     <h3>Color Schema</h3>
-                    <img src="/images/colors.png" alt="colors">
+                    <img src="images/colors.png" alt="colors">
                 </section>
                 <section class="typography">
                     <h3>Typography</h3>
