--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,7 +45,7 @@
     </div>
     <nav>
         <ul class="navigation">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
         </ul>
     </nav>
 
