--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,10 +54,9 @@
     <div id="action">Call to Action</div>
     <div id="event">Current Events</div>
     <div id="weather">Weather Card</div>
-    <div id="spotlights">Spotlight Advertisments</div>
-    <div>Spotlight 1</div>
-    <div>Spotlight 2</div>
-    <div>Spotlight 3</div>
+    <div id="spotlight1"></div>
+    <div id="spotlight2"></div>
+    <div id="spotlight3"></div>
     </div>
 </main>
 </body>
