--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 <header>
     <div class="main-logo">
             <a href="/chamber/index.html">
-                <img src="/chamber/images/hero.jpg" alt="logo">
+                <img src="../chamber/images/hero.jpg" alt="logo">
             </a>
         <section>
             <h1>Hudson Chamber of Commerce</h1>
